// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcRadioBtn > attrs > should render with custom attributes 1`] = `
<div
  class="ec-radio-btn-group my-class"
  data-test="my-data-test ec-radio-btn-group"
  id="test-id"
>
  <!--v-if-->
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > props > error > should render the radio button with a given error message 1`] = `
<div
  class="ec-radio-btn-group__error-text"
  data-test="ec-radio-btn-group__error-text"
  id="ec-radio-btn-group-1-error"
>
  
  Test error message prop
  
</div>
`;

exports[`EcRadioBtn > props > isGroupInline > should render the radio buttons on a single line 1`] = `
<div
  class="ec-radio-btn-group__radio-btn-wrapper ec-radio-btn-group__radio-btn-wrapper--is-single-line"
  data-test="ec-radio-btn-group__radio-btn-wrapper"
>
  
  <div
    class="ec-radio-btn"
    data-test="ec-radio-btn"
  >
    <input
      aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input"
      id="ec-radio-btn-2"
      name="ec-radio-btn-group-1-name"
      type="radio"
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper"
        data-test="ec-radio-btn__icon-wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__text-wrapper"
        data-test="ec-radio-btn__text-wrapper"
      >
        <label
          class="ec-radio-btn__label"
          data-test="ec-radio-btn__label"
          for="ec-radio-btn-2"
          id="ec-radio-btn-2-label"
        >
          
          Yes
          
        </label>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="ec-radio-btn tw-ml-40"
    data-test="ec-radio-btn"
  >
    <input
      aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input"
      id="ec-radio-btn-3"
      name="ec-radio-btn-group-1-name"
      type="radio"
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__icon-wrapper"
        data-test="ec-radio-btn__icon-wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__text-wrapper"
        data-test="ec-radio-btn__text-wrapper"
      >
        <label
          class="ec-radio-btn__label"
          data-test="ec-radio-btn__label"
          for="ec-radio-btn-3"
          id="ec-radio-btn-3-label"
        >
          
          No
          
        </label>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`EcRadioBtn > props > label > should render the radio button without label when not present 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <!--v-if-->
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > props > label > should render with the given label 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <div
    class="ec-radio-btn-group__label"
    data-test="ec-radio-btn-group__label"
  >
    
    Testing label
    
  </div>
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > props > should have the same given "name" attribute among all the radio inputs 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <!--v-if-->
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > should render properly 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <!--v-if-->
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > slots > errorMessage > should render error-message slot instead of error-message prop when both are passed 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <!--v-if-->
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--error"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper ec-radio-btn__icon-wrapper--error"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="ec-radio-btn-group__error-text"
    data-test="ec-radio-btn-group__error-text"
    id="ec-radio-btn-group-1-error"
  >
    
    Error message coming from slot
    
  </div>
</div>
`;

exports[`EcRadioBtn > slots > errorMessage > should render the error message slot if passed 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <!--v-if-->
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="ec-radio-btn-group__error-text"
    data-test="ec-radio-btn-group__error-text"
    id=""
  >
    
    Test error message slot
    
  </div>
</div>
`;

exports[`EcRadioBtn > slots > label > should render label slot instead of label prop when both are passed 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <div
    class="ec-radio-btn-group__label"
    data-test="ec-radio-btn-group__label"
  >
    
    Label message coming from slot
    
  </div>
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn > slots > label > should render the label slot if passed 1`] = `
<div
  class="ec-radio-btn-group"
  data-test="ec-radio-btn-group"
>
  <div
    class="ec-radio-btn-group__label"
    data-test="ec-radio-btn-group__label"
  >
    
    Test label message slot
    
  </div>
  <div
    class="ec-radio-btn-group__radio-btn-wrapper"
    data-test="ec-radio-btn-group__radio-btn-wrapper"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-2-error ec-radio-btn-2-label ec-radio-btn-2-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-2"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-2"
            id="ec-radio-btn-2-label"
          >
            
            Yes
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn"
    >
      <input
        aria-describedby="ec-radio-btn-3-error ec-radio-btn-3-label ec-radio-btn-3-description"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input"
        id="ec-radio-btn-3"
        name="ec-radio-btn-group-1-name"
        type="radio"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__icon-wrapper"
          data-test="ec-radio-btn__icon-wrapper"
        >
          <div
            class="ec-radio-btn__icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__text-wrapper"
          data-test="ec-radio-btn__text-wrapper"
        >
          <label
            class="ec-radio-btn__label"
            data-test="ec-radio-btn__label"
            for="ec-radio-btn-3"
            id="ec-radio-btn-3-label"
          >
            
            No
            
          </label>
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!--v-if-->
</div>
`;
